# Disk-Analyzer

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  STRUCTURE.md  __init__.py  disk_analyzer.py  main.py  pyproject.toml  setup.py
analyzer/: README.md  __init__.py  disk_analyzer.py
generators/: README.md  __init__.py  main.py
infos/: README.md  __init__.py  main.py
